soc/intel/apollolake: Add romstage that calls FSP2.0 driver
This romstage is minimalistic. Its goal is to set up some BARs
that FSP expects to be set and then invoke FSP driver to train
memory.

Change-Id: I3fa56aafe99cf6cf062a46dece3a0febeafdbfad
Signed-off-by: Andrey Petrov <andrey.petrov@intel.com>
Reviewed-on: https://review.coreboot.org/13805
Tested-by: build bot (Jenkins)
Reviewed-by: Aaron Durbin <adurbin@chromium.org>

--- a/src/soc/intel/apollolake/Kconfig
+++ b/src/soc/intel/apollolake/Kconfig
@@ -90,4 +90,17 @@ config C_ENV_BOOTBLOCK_SIZE
 config X86_TOP4G_BOOTMEDIA_MAP
 	bool
 	default n
+
+config ROMSTAGE_ADDR
+	hex
+	default 0xfef2e000
+	help
+	  The base address (in CAR) where romstage should be linked
+
+config FSPM_STACK_SIZE
+	hex
+	default 0x40000
+	help
+	  The amount of CAR memory FSPM needs. Recommended at least 256KiB
+
 endif
