--- a/src/soc/intel/apollolake/Kconfig
+++ b/src/soc/intel/apollolake/Kconfig
@@ -35,6 +35,7 @@ config CPU_SPECIFIC_OPTIONS
 	select TSC_CONSTANT_RATE
 	select UDELAY_TSC
 	select TSC_CONSTANT_RATE
+	select PLATFORM_USES_FSP2_0
 
 config MMCONF_BASE_ADDRESS
 	hex "PCI MMIO Base Address"
