buildgcc: Use $(CURDIR) instead of $(PWD)
coreboot's top level Makefile does the same, so let's stay consistent.

Change-Id: I9e995f3ecadd05d6fbfda64b45dee3a9900d9189
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/13869
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/util/crossgcc/Makefile
+++ b/util/crossgcc/Makefile
@@ -1,6 +1,6 @@
 # if no architecture is specified, set a default
 BUILD_PLATFORM ?= i386-elf
-DEST ?= $(PWD)/xgcc
+DEST ?= $(CURDIR)/xgcc
 
 # For the toolchain builds, use CPUS=x to use multiple processors to build
 # use KEEP_SOURCES=1 to keep temporary files after the build
