buildgcc: Disable RISC-V GDB
Our GDB doesn't support RISC-V yet, so let's disable it for now
to keep the build from breaking.

Change-Id: Iecc6d97fb16d16410c56965abeea55c67800f220
Signed-off-by: Stefan Reinauer <stefan.reinauer@coreboot.org>
Reviewed-on: https://review.coreboot.org/13872
Tested-by: build bot (Jenkins)
Reviewed-by: Ronald G. Minnich <rminnich@gmail.com>

--- a/util/crossgcc/Makefile
+++ b/util/crossgcc/Makefile
@@ -57,7 +57,8 @@ build-mips:
 	@$(MAKE) build_tools BUILD_PLATFORM=mipsel-elf
 
 build-riscv:
-	@$(MAKE) build_tools BUILD_PLATFORM=riscv-elf
+	# GDB is currently not supported on RISC-V
+	@$(MAKE) build_gcc BUILD_PLATFORM=riscv-elf
 
 build-power8:
 	@$(MAKE) build_tools BUILD_PLATFORM=powerpc64le-linux-gnu
