--- a/src/arch/x86/Kconfig
+++ b/src/arch/x86/Kconfig
@@ -155,6 +155,7 @@ config ID_SECTION_OFFSET
 
 config COMPILE_IN_DSDT
 	bool "compile in DSDT and use that over DSDT in CBFS"
+	depends on HAVE_ACPI_TABLES
 	default n
 
 # 64KiB default bootblock size when employing C_ENVIRONMENT_BOOTBLOCK.
