--- a/src/mainboard/lenovo/t430s/Kconfig
+++ b/src/mainboard/lenovo/t430s/Kconfig
@@ -67,4 +67,8 @@ config MAINBOARD_PCI_SUBSYSTEM_DEVICE_ID
 	hex
 	default 0x21fb
 
+config ONBOARD_VGA_IS_PRIMARY
+	bool
+	default y
+
 endif # BOARD_LENOVO_T430S
