--- a/src/mainboard/lenovo/t520/Kconfig
+++ b/src/mainboard/lenovo/t520/Kconfig
@@ -70,4 +70,8 @@ config MAINBOARD_PCI_SUBSYSTEM_DEVICE_ID
 	hex
 	default 0x21cf
 
+config ONBOARD_VGA_IS_PRIMARY
+	bool
+	default y
+
 endif # BOARD_LENOVO_T520
