--- a/src/mainboard/lenovo/t530/Kconfig
+++ b/src/mainboard/lenovo/t530/Kconfig
@@ -68,4 +68,8 @@ config MAINBOARD_PCI_SUBSYSTEM_DEVICE_ID
 	hex
 	default 0x21fa
 
+config ONBOARD_VGA_IS_PRIMARY
+	bool
+	default y
+
 endif # BOARD_LENOVO_T530
