soc/intel/apollolake: Enable CACHE_MRC_SETTINGS
This enables CACHE_MRC_SETTINGS by default as well selects
timer configuration.

Change-Id: I0248001892ef763c39097848b5adc8c1befed1f0
Signed-off-by: Hannah Williams <hannah.williams@intel.com>
Signed-off-by: Andrey Petrov <andrey.petrov@intel.com>
Reviewed-on: https://review.coreboot.org/14252
Tested-by: build bot (Jenkins)
Reviewed-by: Martin Roth <martinroth@google.com>

--- a/src/soc/intel/apollolake/Kconfig
+++ b/src/soc/intel/apollolake/Kconfig
@@ -35,8 +35,8 @@ config CPU_SPECIFIC_OPTIONS
 	select SPI_FLASH
 	select UDELAY_TSC
 	select TSC_CONSTANT_RATE
-	select UDELAY_TSC
-	select TSC_CONSTANT_RATE
+	select TSC_MONOTONIC_TIMER
+	select HAVE_MONOTONIC_TIMER
 	select PLATFORM_USES_FSP2_0
 
 config MMCONF_BASE_ADDRESS
@@ -99,5 +99,9 @@ config ROMSTAGE_ADDR
 	default 0xfef2e000
 	help
 	  The base address (in CAR) where romstage should be linked
+
+config CACHE_MRC_SETTINGS
+	bool
+	default y
 
 endif
