build system: Allow overriding the path to the futility binary
Change-Id: I84e68e8407149780769c3e6a1148c175e42d1025
Signed-off-by: Patrick Georgi <pgeorgi@google.com>
Reviewed-on: https://review.coreboot.org/14100
Tested-by: build bot (Jenkins)
Reviewed-by: Stefan Reinauer <stefan.reinauer@coreboot.org>

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -423,7 +423,7 @@ $(AMDFWTOOL): $(top)/util/amdfwtool/amdfwtool.c
 
 CBOOTIMAGE:=$(objutil)/cbootimage/cbootimage
 
-FUTILITY:=$(objutil)/futility/futility
+FUTILITY?=$(objutil)/futility/futility
 
 subdirs-y += util/nvidia
 
