--- a/src/arch/x86/Kconfig
+++ b/src/arch/x86/Kconfig
@@ -167,3 +167,8 @@ config ROMSTAGE_ADDR
 config VERSTAGE_ADDR
 	hex
 	default 0x2000000
+
+# Use the post CAR infrastructure for tearing down cache-as-ram
+# from a program loaded in ram and subsequently loading ramstage.
+config POSTCAR_STAGE
+	def_bool n
