--- a/src/soc/rockchip/rk3399/Makefile.inc
+++ b/src/soc/rockchip/rk3399/Makefile.inc
@@ -41,6 +41,7 @@ romstage-y += ../common/spi.c
 romstage-$(CONFIG_DRIVERS_UART) += ../common/uart.c
 romstage-y += clock.c
 romstage-y += mmu_operations.c
+romstage-y += ../common/pwm.c
 romstage-y += timer.c
 romstage-y += romstage.c
 
